tests/ui/trait-fn.stderr
error: expected curly braces
 --> tests/ui/trait-fn.rs:5:11
  |
5 |     fn f();
  |           ^

error[E0407]: method `f` is not a member of trait `Trait`
 --> tests/ui/trait-fn.rs:9:5
  |
9 |     fn f() {}
  |     ^^^^^^^^^ not a member of trait `Trait`
